publish error resources

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -27,6 +27,10 @@ html {
      tab-size: 4;
 }
 
+bg-transparent{
+    background-color:transparent
+}
+
 /**
 1. Correct the line height in all browsers.
 2. Prevent adjustments of font size after orientation changes in iOS.
